src/objects/Project_Update_Request_Backup__b.object
<CustomObject>
    <description>MG_Project Update Request</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Update Request</relationshipLabel>
        <relationshipName>Project_Update_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Phone_Number__c</fullName>
        <label>Alternate Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date Editable</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_Date_formula__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assessments_Dollar_NA__c</fullName>
        <label>Additional Tax Assessment($) N/A</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessments_Dollar__c</fullName>
        <label>Additional Tax Assessments ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Approval_Result__c</fullName>
        <label>Auto Approval Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Approved__c</fullName>
        <label>Auto Approved</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big_Change_Alert__c</fullName>
        <label>Big Change Alert</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big_Change_Reason_s__c</fullName>
        <label>Big Change Reason/s</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Co_Op_Incentives_Unchanged__c</fullName>
        <label>Broker Co-Op Incentives Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_Co_Op_Incentives__c</fullName>
        <label>Broker Co-Op Incentives</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Builder__c</fullName>
        <label>Builder</label>
        <referenceTo>Builder__c</referenceTo>
        <relationshipLabel>Project Update Request</relationshipLabel>
        <relationshipName>Project_Update_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Center_Disposition__c</fullName>
        <label>Call Center Disposition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Center_Notes__c</fullName>
        <label>Call Center Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_Plans__c</fullName>
        <label>Count of Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Update_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Time__c</fullName>
        <label>Created Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_User__c</fullName>
        <label>Data User</label>
        <referenceTo>Data_User__c</referenceTo>
        <relationshipLabel>Project Update Request</relationshipLabel>
        <relationshipName>Project_Update_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_Since_Data_User_Created__c</fullName>
        <label>Days Since Data User Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <label>Do Not Call</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Special__c</fullName>
        <label>Email/Special</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <label>FIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_2_NA__c</fullName>
        <label>Monthly HOA #2 N/A</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_2__c</fullName>
        <label>Monthly HOA #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOA_Description__c</fullName>
        <label>HOA Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_NA__c</fullName>
        <label>Monthly HOA #1 N/A</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <label>Monthly HOA #1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incentive_Options__c</fullName>
        <label>Incentive Options</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inside_Update_Cycle__c</fullName>
        <label>Inside Update Cycle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Time__c</fullName>
        <label>Last Modified Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_User_Price__c</fullName>
        <label>Last Update User (Price)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_User_Sales__c</fullName>
        <label>Last Update User (Sales)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Broker_Co_Op__c</fullName>
        <label>Last Updated Date (Broker Co-Op)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Price__c</fullName>
        <label>Last Updated Date (Price)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Quick_Move__c</fullName>
        <label>Last Updated Date (Quick Move)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_Sales__c</fullName>
        <label>Last Updated Date (Sales)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_To_Be_Built_q__c</fullName>
        <label>Last Updated Date (To Be Built)q</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_UUC__c</fullName>
        <label>Last Updated Date (UUC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_Date_UnUUC__c</fullName>
        <label>Last Updated Date (UnUUC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_User_UUC__c</fullName>
        <label>Last Updated User (UUC)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_User_UnUUC__c</fullName>
        <label>Last Updated User (UnUUC)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Dimension__c</fullName>
        <label>Lot Dimension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Plan__c</fullName>
        <label>Master Plan</label>
        <referenceTo>Master_Plan__c</referenceTo>
        <relationshipLabel>Project Update Request</relationshipLabel>
        <relationshipName>Project_Update_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Price__c</fullName>
        <label>Max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Unit_Size__c</fullName>
        <label>Max Unit Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MeyersNotesCounter__c</fullName>
        <label>Meyers Notes Available Characters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meyers_Disposition__c</fullName>
        <label>Meyers Disposition</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Disposition_calc__c</fullName>
        <label>Meyers Disposition (calc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Notes__c</fullName>
        <label>Meyers Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meyers_Notes_internal__c</fullName>
        <label>Meyers Notes (internal)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Min_Price__c</fullName>
        <label>Min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Unit_Size__c</fullName>
        <label>Min Unit Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_SF_NA__c</fullName>
        <label>Monthly HOA ($/SF) N/A</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_SF__c</fullName>
        <label>Monthly HOA ($/SF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Atempts__c</fullName>
        <label>Multiple Attempts</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Attempts__c</fullName>
        <label>Multiple Attempts</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Times_Auto_Approved__c</fullName>
        <label>No Of Times Auto Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Days_Since_Last_Update__c</fullName>
        <label># of Days Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Update_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Alternate_Phone_Number__c</fullName>
        <label>Previous Alternate Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Assessment_Description__c</fullName>
        <label>Previous Assessment Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Assessments_Dollar__c</fullName>
        <label>Previous Additional Assessments ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Broker_Co_Op_Incentives__c</fullName>
        <label>Previous Broker Co-Op Incentives</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Broker_Co_Op_Unchanged__c</fullName>
        <label>Previous Broker Co-Op Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_City__c</fullName>
        <label>Previous City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_County__c</fullName>
        <label>Previous County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Do_Not_Call__c</fullName>
        <label>Previous Do Not Call</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Email_Special__c</fullName>
        <label>Previous Email/Special</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_FIPS__c</fullName>
        <label>Previous FIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_HOA_2__c</fullName>
        <label>Previous Monthly HOA #2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_HOA_Description__c</fullName>
        <label>Previous HOA Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_HOA__c</fullName>
        <label>Previous Monthly HOA #1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Incentive_Options__c</fullName>
        <label>Previous Incentive Options</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Location__c</fullName>
        <label>Previous Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Lot_Dimension__c</fullName>
        <label>Previous Lot Dimension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Master_Plan__c</fullName>
        <label>Previous Master Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Max_Price__c</fullName>
        <label>Previous Max Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Max_Unit_Size__c</fullName>
        <label>Previous Max Unit Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Meyers_Disposition_calc__c</fullName>
        <label>Previous Meyers Disposition (calc)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Meyers_Notes__c</fullName>
        <label>Previous Meyers Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Min_Price__c</fullName>
        <label>Previous Min Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Min_Unit_Size__c</fullName>
        <label>Previous Min Unit Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Monthly_HOA_SF__c</fullName>
        <label>Previous Monthly HOA ($/SF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_No_Of_Times_Auto_Approved_Set__c</fullName>
        <label>Previous No Of Times Auto Approved Set</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_No_Of_Times_Auto_Approved__c</fullName>
        <label>Previous No Of Times Auto Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Open_Date__c</fullName>
        <label>Previous Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Phone_Number__c</fullName>
        <label>Previous Phone Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Product_Type__c</fullName>
        <label>Previous Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Project_Characteristics__c</fullName>
        <label>Previous Project Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Quick_Move_In_Incentives__c</fullName>
        <label>Previous Quick Move-In Incentives</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Quick_Move_In_Unchanged__c</fullName>
        <label>Previous Quick Move-In Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Region_ID__c</fullName>
        <label>Previous Region ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Office_Notes__c</fullName>
        <label>Previous Sales Office Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Person_2__c</fullName>
        <label>Previous Sales Person #2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Person_Name__c</fullName>
        <label>Previous Sales Person Name #1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Rate__c</fullName>
        <label>Previous Sales Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Rate_calc__c</fullName>
        <label>Previous Sales Rate (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_Unchanged__c</fullName>
        <label>Previous Sales Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_and_Marketing_Firm__c</fullName>
        <label>Previous Sales and Marketing Firm</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sales_based_on_closing_data__c</fullName>
        <label>Previous Sales based on closing data</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Sold_Out_Date__c</fullName>
        <label>Previous Sold Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_State__c</fullName>
        <label>Previous State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <label>Previous Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_To_Be_Built_Incentives__c</fullName>
        <label>Previous To Be Built Incentives</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_To_Be_Built_Unchanged__c</fullName>
        <label>Previous To Be Built Unchanged</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Total_Remaining__c</fullName>
        <label>Previous Total Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Total_Tax_Rate__c</fullName>
        <label>Previous Total Tax Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Total_Units_Planned__c</fullName>
        <label>Previous Total Units Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Total_Units_Sold__c</fullName>
        <label>Previous Total Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Typical_Lot_Size__c</fullName>
        <label>Previous Typical Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Units_under_construction__c</fullName>
        <label>Previous # Units under construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Unsold_units_under_construct__c</fullName>
        <label>Previous # Unsold units under construct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Website__c</fullName>
        <label>Previous Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Set_to_Review__c</fullName>
        <label>Previously Set to Review</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prices_Unchanged__c</fullName>
        <label>Prices Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Characteristics__c</fullName>
        <label>Project Characteristics</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <label>Project City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_County__c</fullName>
        <label>Project County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID_Legacy__c</fullName>
        <label>Project ID (Legacy)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <label>Project State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Update_Request_Id__c</fullName>
        <label>Project Update Request Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Update Request</relationshipLabel>
        <relationshipName>Project_Update_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Move_In_Incentives_Unchanged__c</fullName>
        <label>Quick Move-In Incentives Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Move_In_Incentives__c</fullName>
        <label>Quick Move-In Incentives</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_ID__c</fullName>
        <label>Region ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office_Notes__c</fullName>
        <label>Sales Office Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_2__c</fullName>
        <label>Sales Person #2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Name__c</fullName>
        <label>Sales Person Name #1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_Validated__c</fullName>
        <label>Sales Rate Validated</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rate__c</fullName>
        <label>Sales Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Rate_calc__c</fullName>
        <label>Sales Rate (calc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Unchanged__c</fullName>
        <label>Sales Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_and_Marketing_Firm__c</fullName>
        <label>Sales and Marketing Firm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_based_on_closing_data__c</fullName>
        <label>Sales based on closing data</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_Out_Date__c</fullName>
        <label>Sold Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Assessment_Description__c</fullName>
        <label>Tax Assessment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Built_Incentives_Unchanged__c</fullName>
        <label>To Be Built Incentives Unchanged</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Built_Incentives__c</fullName>
        <label>To Be Built Incentives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Remaining__c</fullName>
        <label>Total Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Remaining_calc__c</fullName>
        <label>Total Remaining (calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Rate__c</fullName>
        <label>Total Tax Rate (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Planned__c</fullName>
        <label>Total Units Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Sold_Diff_Calc__c</fullName>
        <label>Total Units Sold Diff Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Units_Sold__c</fullName>
        <label>Total Units Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Typical_Lot_Size__c</fullName>
        <label>Typical Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_under_construction__c</fullName>
        <label># Units under construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsold_units_under_construction__c</fullName>
        <label># Unsold units under construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Request_Status__c</fullName>
        <label>Update Request Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Request_Type__c</fullName>
        <label>Update Request Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <indexes>
        <fullName>Project_Update_Request_Index</fullName>
        <fields>
            <name>Project_Update_Request_Id__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <label>Project Update Request Index</label>
    </indexes>
    <label>Project Update Request</label>
    <pluralLabel>Project Update Request</pluralLabel>
</CustomObject>